--- a/.github/workflows/python-workflow.yml
+++ b/.github/workflows/python-workflow.yml
@@ -13,6 +13,8 @@ jobs:
       with:
         python-version: 3.11
 
+    - uses: actions/checkout@v4
+
     - name: Install dependencies
       run: |
         pip install -r requirements.txt
